Fix bug Dockerfile